# docrunr

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.llm  LICENSE  README.md  SECURITY.md  SPEC.md  compose_config.yaml  docker-compose.base.yml  docker-compose.llm.yml  docker-compose.local.yml  docker-compose.minio.yml  docker-compose.ollama.yml  docker-compose.yml  litellm.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
core/: pyproject.toml
core/src/docrunr/: __init__.py  _clean_toc.py  _text.py  chunk.py  clean.py  cli.py  detect.py  models.py  pipeline.py  quality.py
core/src/docrunr/parsers/: __init__.py  _converters.py  base.py  email.py  html_parser.py  image.py  office.py  pdf.py  registry.py  text.py
scripts/: dev.mjs  docker.mjs  lint.mjs  ollama-docker-entrypoint.sh  purge.sh  release.sh  test.mjs
tests/: conftest.py
tests/core/: conftest.py  test_chunk.py  test_clean.py  test_cli.py  test_converters.py  test_detect.py  test_models.py  test_pipeline.py  test_quality.py  test_registry.py
tests/downloads/: README.md  __init__.py  __main__.py  console.py  discovery.py  formatting.py  mime_utils.py  models.py  naming.py  runner.py  test_mime_utils.py
tests/integration/: __init__.py  conftest.py  integration_storage.py  reporting.py  rmq_helpers.py  test_llm_jobs_e2e.py  test_llm_profile_selection.py  test_manifest.py  test_rabbitmq_priority_order.py  test_rmq_helpers.py  test_sample_sources.py  test_upload_api_e2e.py  test_worker_jobs_e2e.py
tests/integration/fixtures/: __init__.py  sample_sources.py
tests/samples/email/eml/: dutch_woo.eml  forwarded_chain.eml  html_formatted.eml  malformed_headers.eml  multipart_text_html.eml  plain_simple.eml  reply_thread.eml  with_attachment.eml
tests/samples/html/: article.html  government_page.html  simple_page.html
tests/samples/odf/ods/: budget.ods  simple_data.ods
tests/samples/odf/odt/: formatted.odt  government_template.odt  simple_letter.odt
tests/samples/office/docx/: contract.docx  dutch_letter.docx  headers_lists.docx  links.docx  project_plan_template.docx  report_complex.docx  sub_sub_bullets.docx
tests/samples/office/pptx/: multi_layout.pptx  with_notes.pptx
tests/samples/office/xls/: simple_data.xls
tests/samples/office/xlsx/: budget_formulas.xlsx  date_format_edge_cases.xlsx  large_dataset.xlsx  merged_hidden_crosssheet.xlsx  multi_sheet.xlsx  simple_data.xlsx
tests/samples/text/csv/: data.csv
tests/samples/text/json/: data.json
tests/samples/text/txt/: base64_uuid_dump.txt  nested_bullets_indent.txt  plain.txt  unicode_stress.txt
tests/samples/text/xml/: budget.xml  config.xml  employees.xml  letter.xml
tests/worker/: test_config.py  test_consumer.py  test_handler.py  test_health.py  test_health_auth_http.py  test_job_messages.py  test_job_store.py  test_main.py  test_publisher.py  test_rabbitmq_health.py  test_storage.py  test_upload_http_priority.py  test_uploads.py
tests/worker_llm/: test_config.py  test_consumer.py  test_embeddings.py  test_handler.py  test_health_http.py  test_job_messages.py  test_job_store.py  test_litellm_client.py  test_storage.py
ui/: .fallowrc.json  .prettierignore  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: main.tsx  vite-env.d.ts
ui/src/app/: App.css  App.tsx  AppShellLayout.tsx  LoginScreen.tsx  WorkerAuthContext.tsx  app-sections.tsx  sidebar-toggle-icon.tsx  url-section.ts  useWorkerAuth.ts  version.ts  worker-auth-context.ts
ui/src/components/: RingLoader.module.css  RingLoader.tsx
ui/src/components/brand/: DocRunrLogo.tsx
ui/src/components/flags/: LangFlag.tsx
ui/src/components/icons/: FileTypeIcon.tsx
ui/src/contexts/: WorkerModeContext.tsx  WorkerModeContextState.ts  useWorkerMode.ts
ui/src/features/about/components/: AboutModal.tsx
ui/src/features/llm/components/: LlmJobsTable.tsx  LlmOverview.tsx
ui/src/features/llm/hooks/: useLlmPolling.ts
ui/src/features/overview/components/: ProcessingOverview.test.ts  ProcessingOverview.tsx  ServerUptime.tsx  StatCard.tsx  processingOverviewHeatmap.ts
ui/src/features/processing/lib/: job-buckets.ts  metric-series.ts  mime-series.ts  (+1 more)
ui/src/features/uploads/: types.ts
ui/src/hooks/: usePolling.ts
ui/src/i18n/: index.ts
ui/src/i18n/locales/: en.json  nl.json
ui/src/services/: artifact-urls.ts  sessionInvalidate.ts  workerApi.test.ts  workerApi.ts  workerApi.types.ts  workerLlmApi.ts  workerLlmApi.types.ts
ui/src/utils/: console-warn-filters.ts  duration.ts  file-size.ts  mime-types.ts
worker/: pyproject.toml
worker-llm/: pyproject.toml
worker-llm/src/docrunr_worker_llm/: __init__.py  config.py  consumer.py  embeddings.py  handler.py  health.py  insight.py  job_messages.py  job_status.py  job_store.py  litellm_client.py  main.py  publisher.py  rabbitmq_health.py  storage.py
worker/src/docrunr_worker/: __init__.py  config.py  consumer.py  handler.py  health.py  job_messages.py  job_status.py  job_store.py  main.py  publisher.py  rabbitmq_health.py  storage.py  uploads.py
(+14 files in other folders)
