[project]
name = "docrunr"
version = "0.0.0"
description = "Core library and CLI for DocRunr document processing."
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "DocRunr Contributors" }]
keywords = ["document", "markdown", "rag", "chunking", "extraction"]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "magika>=0.6",
    "tiktoken>=0.12",
    "markitdown[all]>=0.1.5",
    "kreuzberg>=4.6.0",
    "beautifulsoup4>=4.12",
    "docling>=2.80.0",
    "pypdfium2>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
docrunr = "docrunr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docrunr"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "B008",   # function-call-in-default-argument — standard Typer pattern
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
