[project]
name = "docrunr-worker"
version = "0.1.0"
description = "RabbitMQ worker for DocRunr document processing."
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "DocRunr Contributors" }]
keywords = ["docrunr", "worker", "rabbitmq", "rag"]

dependencies = [
    "docrunr",
    "minio>=7.0",
    "pika>=1.3",
    "psutil>=6.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
docrunr-worker = "docrunr_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docrunr_worker"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
